--- a/Simple RNN/simplernn.ipynb
+++ b/Simple RNN/simplernn.ipynb
@@ -13,7 +13,16 @@
    "execution_count": 1,
    "id": "7dd9f897",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From e:\\GenLangHF-Project\\.venv\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8a6a1369",
    "metadata": {},
    "outputs": [],
