--- a/Simple RNN/simplernn.ipynb
+++ b/Simple RNN/simplernn.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "7dd9f897",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From e:\\GenLangHF-Project\\.venv\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\ninaw\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n"
      ]
     }
@@ -34,32 +34,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ac9e8eac",
+   "execution_count": 2,
+   "id": "c0345bb4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traning Data shape: (25000,), Traning labels shape: (25000,)\n",
-      "Traning Data shape: (25000,), Traning labels shape: (25000,)\n"
+      "Training data shape: (25000,), Training labels shape: (25000,)\n",
+      "Training data shape: (25000,), Training labels shape: (25000,)\n"
      ]
     }
    ],
    "source": [
-    "## load the imdb dataset\n",
-    "max_feature = 10000    # vocabulary size\n",
-    "(x_train,y_train),(x_test,y_test)=imdb.load_data(num_words=max_feature)\n",
+    "## load te imdb dataset\n",
     "\n",
-    "print(f\"Traning Data shape: {x_train.shape}, Traning labels shape: {y_train.shape}\")\n",
-    "print(f\"Traning Data shape: {x_test.shape}, Traning labels shape: {y_test.shape}\")\n"
+    "max_feature = 10000 ## vocablory size\n",
+    "(x_train,y_train),(x_test,y_test) = imdb.load_data(num_words=max_feature)\n",
+    "\n",
+    "# print the shape of the data\n",
+    "print(f'Training data shape: {x_train.shape}, Training labels shape: {y_train.shape}')\n",
+    "print(f'Training data shape: {x_test.shape}, Training labels shape: {y_test.shape}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e499944c",
+   "execution_count": 3,
+   "id": "a5121476",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +288,7 @@
        " 1)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,33 +299,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "aaf3aaf9",
+   "execution_count": 4,
+   "id": "94e80427",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sampel review (as integers): [1, 14, 22, 16, 43, 530, 973, 1622, 1385, 65, 458, 4468, 66, 3941, 4, 173, 36, 256, 5, 25, 100, 43, 838, 112, 50, 670, 2, 9, 35, 480, 284, 5, 150, 4, 172, 112, 167, 2, 336, 385, 39, 4, 172, 4536, 1111, 17, 546, 38, 13, 447, 4, 192, 50, 16, 6, 147, 2025, 19, 14, 22, 4, 1920, 4613, 469, 4, 22, 71, 87, 12, 16, 43, 530, 38, 76, 15, 13, 1247, 4, 22, 17, 515, 17, 12, 16, 626, 18, 2, 5, 62, 386, 12, 8, 316, 8, 106, 5, 4, 2223, 5244, 16, 480, 66, 3785, 33, 4, 130, 12, 16, 38, 619, 5, 25, 124, 51, 36, 135, 48, 25, 1415, 33, 6, 22, 12, 215, 28, 77, 52, 5, 14, 407, 16, 82, 2, 8, 4, 107, 117, 5952, 15, 256, 4, 2, 7, 3766, 5, 723, 36, 71, 43, 530, 476, 26, 400, 317, 46, 7, 4, 2, 1029, 13, 104, 88, 4, 381, 15, 297, 98, 32, 2071, 56, 26, 141, 6, 194, 7486, 18, 4, 226, 22, 21, 134, 476, 26, 480, 5, 144, 30, 5535, 18, 51, 36, 28, 224, 92, 25, 104, 4, 226, 65, 16, 38, 1334, 88, 12, 16, 283, 5, 16, 4472, 113, 103, 32, 15, 16, 5345, 19, 178, 32]\n",
-      "sampel labels : 1\n"
+      "Sample review (as integers): [1, 14, 22, 16, 43, 530, 973, 1622, 1385, 65, 458, 4468, 66, 3941, 4, 173, 36, 256, 5, 25, 100, 43, 838, 112, 50, 670, 2, 9, 35, 480, 284, 5, 150, 4, 172, 112, 167, 2, 336, 385, 39, 4, 172, 4536, 1111, 17, 546, 38, 13, 447, 4, 192, 50, 16, 6, 147, 2025, 19, 14, 22, 4, 1920, 4613, 469, 4, 22, 71, 87, 12, 16, 43, 530, 38, 76, 15, 13, 1247, 4, 22, 17, 515, 17, 12, 16, 626, 18, 2, 5, 62, 386, 12, 8, 316, 8, 106, 5, 4, 2223, 5244, 16, 480, 66, 3785, 33, 4, 130, 12, 16, 38, 619, 5, 25, 124, 51, 36, 135, 48, 25, 1415, 33, 6, 22, 12, 215, 28, 77, 52, 5, 14, 407, 16, 82, 2, 8, 4, 107, 117, 5952, 15, 256, 4, 2, 7, 3766, 5, 723, 36, 71, 43, 530, 476, 26, 400, 317, 46, 7, 4, 2, 1029, 13, 104, 88, 4, 381, 15, 297, 98, 32, 2071, 56, 26, 141, 6, 194, 7486, 18, 4, 226, 22, 21, 134, 476, 26, 480, 5, 144, 30, 5535, 18, 51, 36, 28, 224, 92, 25, 104, 4, 226, 65, 16, 38, 1334, 88, 12, 16, 283, 5, 16, 4472, 113, 103, 32, 15, 16, 5345, 19, 178, 32]\n",
+      "Sample labes: 1\n"
      ]
     }
    ],
    "source": [
     "## inspect a sample review and its label\n",
-    "\n",
+    "# only one sent\n",
     "sampel_review = x_train[0]\n",
     "sampel_label = y_train[0]\n",
     "\n",
-    "print(f\"sampel review (as integers): {sampel_review}\")\n",
-    "print(f\"sampel labels : {sampel_label}\")"
+    "print(f'Sample review (as integers): {sampel_review}')\n",
+    "print(f'Sample labes: {sampel_label}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "e5eff089",
+   "execution_count": 5,
+   "id": "6e1aaccf",
    "metadata": {},
    "outputs": [
     {
@@ -1332,21 +1334,22 @@
        " ...}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## mapping of words index back to words (for understanding)\n",
+    "## Mapping of word index back to word (for understanding)\n",
+    "\n",
     "word_index = imdb.get_word_index()\n",
-    "word_index\n"
+    "word_index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "80e10ee5",
+   "execution_count": 6,
+   "id": "f8775571",
    "metadata": {},
    "outputs": [
     {
@@ -2355,44 +2358,45 @@
        " ...}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## This is reverse \n",
-    "reverse_value_index = {value:key for key, value in word_index.items()}\n",
+    "## for reverse index\n",
+    "\n",
+    "reverse_value_index = {value: key for key, value in word_index.items()}\n",
     "reverse_value_index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c833096e",
+   "execution_count": 7,
+   "id": "1327df2e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"? it movie this her won't leading brian hoping which lives wished only foul ? few by hard ? on them her suspense seen if female ? of at fine reason ? those ? going seen actually ? else sex who ? going ya credit that voice they in evil ? however if this the back h as it movie ? vs hung under ? movie had other br this her won't they than i in 100 ? movie that town that br this yourself was ? ? even mean br a night a think ? ? combination filling this fine only superhero one ? better br this they shown ? on did some by here out on festival one the movie br point are we there ? it style this will ? a ? characters never formed i hard ? ? and dignity ? bring by had her won't i'd not written during about and ? ? attempts in movies first ? stupid i together way be buddy when not scenes the fact boundaries was ? done movie with man i'd not fine ? something have hyped was some by are least him on movies ? done which this they disappointing first br this sense ? this pretending many any be i this marshall as lot be\""
+       "\"? this film was just brilliant casting location scenery story direction everyone's really suited the part they played and you could just imagine being there robert ? is an amazing actor and now the same being director ? father came from the same scottish island as myself so i loved the fact there was a real connection with this film the witty remarks throughout the film were great it was just brilliant so much that i bought the film as soon as it was released for ? and would recommend it to everyone to watch and the fly fishing was amazing really cried at the end it was so sad and you know what they say if you cry at a film it must have been good and this definitely was also ? to the two little boy's that played the ? of norman and paul they were just brilliant children are often left out of the ? list i think because the stars that play them all grown up are such a big profile for the whole film but these children are amazing and should be praised for what they have done don't you think the whole story was so lovely because it was true and was someone's life after all that was shared with us all\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## decoded review\n",
+    "# only one sent\n",
     "decoded_review = ' '.join([reverse_value_index.get(i-3, '?') for i in sampel_review])\n",
     "decoded_review"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e1b7c7d4",
+   "execution_count": 8,
+   "id": "11b0085b",
    "metadata": {},
    "outputs": [
     {
@@ -2407,27 +2411,25 @@
        "       [   0,    0,    0, ...,  204,  131,    9]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### pre-padding tecnique\n",
     "from tensorflow.keras.preprocessing import sequence\n",
     "\n",
     "max_len = 500\n",
     "\n",
-    "X_train = sequence.pad_sequences(x_train,maxlen=max_len)\n",
-    "X_test = sequence.pad_sequences(x_test,maxlen=max_len)\n",
-    "X_train\n",
-    "# X_test\n"
+    "X_train= sequence.pad_sequences(x_train, maxlen=max_len)\n",
+    "X_test= sequence.pad_sequences(x_test, maxlen=max_len)\n",
+    "X_train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "a154e870",
+   "execution_count": 9,
+   "id": "4bfaf6e7",
    "metadata": {},
    "outputs": [
     {
@@ -2481,7 +2483,7 @@
        "         16, 5345,   19,  178,   32])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2492,24 +2494,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4e30f94d",
+   "execution_count": 10,
+   "id": "45a86c10",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\ninaw\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Train  a simple RNN\n",
+    "## 128 are dim\n",
+    "model= Sequential()\n",
+    "# Embedding(input_dim, output_dim)\n",
+    "model.add(Embedding(max_feature, 128, input_length= max_len))\n",
+    "model.add(SimpleRNN(128,activation='relu'))\n",
+    "model.add(Dense(1,activation='sigmoid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "976a5fa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, 500, 128)          1280000   \n",
+      "                                                                 \n",
+      " simple_rnn (SimpleRNN)      (None, 128)               32896     \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1)                 129       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1313025 (5.01 MB)\n",
+      "Trainable params: 1313025 (5.01 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4b281a6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\ninaw\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "68bd68fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.EarlyStopping at 0x1d46fa4e230>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## create a earlystopping callback\n",
+    "\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "earlyStopping=EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
+    "earlyStopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "871d5be4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "WARNING:tensorflow:From c:\\Users\\ninaw\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\ninaw\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "625/625 [==============================] - 87s 135ms/step - loss: 86.0185 - accuracy: 0.5853 - val_loss: 0.6143 - val_accuracy: 0.6508\n",
+      "Epoch 2/10\n",
+      "625/625 [==============================] - 95s 152ms/step - loss: 0.4274 - accuracy: 0.8056 - val_loss: 0.3824 - val_accuracy: 0.8318\n",
+      "Epoch 3/10\n",
+      "625/625 [==============================] - 97s 155ms/step - loss: 0.2684 - accuracy: 0.8918 - val_loss: 0.3563 - val_accuracy: 0.8474\n",
+      "Epoch 4/10\n",
+      "625/625 [==============================] - 94s 150ms/step - loss: 0.2000 - accuracy: 0.9255 - val_loss: 0.3617 - val_accuracy: 0.8582\n",
+      "Epoch 5/10\n",
+      "625/625 [==============================] - 92s 148ms/step - loss: 0.1555 - accuracy: 0.9445 - val_loss: 0.3876 - val_accuracy: 0.8452\n",
+      "Epoch 6/10\n",
+      "625/625 [==============================] - 94s 151ms/step - loss: 0.1647 - accuracy: 0.9399 - val_loss: 0.4204 - val_accuracy: 0.8214\n",
+      "Epoch 7/10\n",
+      "625/625 [==============================] - 80s 128ms/step - loss: 0.1167 - accuracy: 0.9599 - val_loss: 0.4149 - val_accuracy: 0.8488\n",
+      "Epoch 8/10\n",
+      "625/625 [==============================] - 74s 118ms/step - loss: 0.0933 - accuracy: 0.9689 - val_loss: 0.5454 - val_accuracy: 0.8664\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Train the odel with early stoping\n",
+    "\n",
+    "history = model.fit(\n",
+    "    X_train,y_train, \n",
+    "    epochs=10, \n",
+    "    batch_size = 32,\n",
+    "    validation_split = 0.2,\n",
+    "    callbacks=[earlyStopping]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "aad5f3ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ninaw\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "## save model file\n",
+    "\n",
+    "model.save('simple_rnn_imdb.h5')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09e87739",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad3e6f66",
+   "id": "9b27a590",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2517,7 +2670,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
