--- a/LSTM RNN/experiment.ipynb
+++ b/LSTM RNN/experiment.ipynb
@@ -2538,6 +2538,17 @@
     "next_word=predict_next_word(model,Tokenizer,input_text,max_sequence_len)\n",
     "print(f\"Next Word Prediction:{next_word}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4db124a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## To Better Prediction Go To The Link:\n",
+    "#  https://colab.research.google.com/github/RahulNinawe05/GenFlow-/blob/main/LSTM%20RNN/experiment.ipynb"
+   ]
   }
  ],
  "metadata": {
