add the last sent

--- a/LSTM RNN/experiment.ipynb
+++ b/LSTM RNN/experiment.ipynb
@@ -2540,14 +2540,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4db124a7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## To Better Prediction Go To The Link:\n",
-    "#  https://colab.research.google.com/github/RahulNinawe05/GenFlow-/blob/main/LSTM%20RNN/experiment.ipynb"
+    "#### For Better Prediction :-\n",
+    "- To Change a **epochs=50**"
    ]
   }
  ],
