lstm rnn shayary project complate

--- a/LSTM RNN/experiment.ipynb
+++ b/LSTM RNN/experiment.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "580211ad",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1111,7 @@
        " ...}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d8ed745d",
    "metadata": {},
    "outputs": [],
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c1fb339a",
    "metadata": {},
    "outputs": [
@@ -2148,7 +2148,7 @@
        " ...]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2159,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8008e6b2",
    "metadata": {},
    "outputs": [
@@ -2169,7 +2169,7 @@
        "14"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2182,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fa11d566",
    "metadata": {},
    "outputs": [
@@ -2198,7 +2198,7 @@
        "       [   0,    0,    0, ..., 1047,    4,  193]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2211,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "788bd0df",
    "metadata": {},
    "outputs": [],
@@ -2223,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1a1ac087",
    "metadata": {},
    "outputs": [
@@ -2239,7 +2239,7 @@
        "       [   0,    0,    0, ...,   45, 1047,    4]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2250,7 +2250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7e85bbc4",
    "metadata": {},
    "outputs": [
@@ -2260,7 +2260,7 @@
        "array([ 687,    4,   45, ..., 1047,    4,  193])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2271,7 +2271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3ef480c7",
    "metadata": {},
    "outputs": [
@@ -2287,7 +2287,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2301,19 +2301,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "fe80b262",
    "metadata": {},
    "outputs": [],
    "source": [
     "## split the data into training and tastion sets\n",
-    "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1b9d909f",
    "metadata": {},
    "outputs": [
@@ -2348,7 +2347,7 @@
     }
    ],
    "source": [
-    "#Train out LSTM RNN\n",
+    "#Train findout LSTM RNN\n",
     "\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense, Dropout\n",
@@ -2518,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "9346a0e1",
    "metadata": {},
    "outputs": [
